Fixed center alignment of body

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
-html, body {
-    height: 60%;
+body {
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    max-width: 300px;
+    margin: 0 auto;
 }
 
 h1 {
@@ -18,7 +21,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     min-height: 100%;
-    min-width: 90%;
+    max-width: 90%
 }
 
 .timer, .controls {
